--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=url-shortner-sb
+spring.datasource.url=jdbc:mysql://localhost:3306/urlshortnerdb
+spring.datasource.username=root
+spring.datasource.password=
+
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
